--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ window.onload = function() {
                           <div class="col-lg-7 col-sm-6 col-12">
                             <ul class="list-unstyled social-icons">
                       <li><a href="https://dribbble.com/Ryzxell"><i class="fab fa-dribbble-square "></i></a></li>
-                      <li><a href="https://github.com/Lingz-ui"><i class="fab fa-github-square "></i></a></li>
+                      <li><a href="https://github.com/ryzxel6"><i class="fab fa-github-square "></i></a></li>
                       <li><a href="https://www.instagram.com/ryzxell"><i class="fab fa-instagram-square"></i></a></li>
                             </ul> 
                           </div>
